2009-10-09  Per Bothner  <per@bothner.com>

	* Declaration.java (isStatic):  Tweak previous change.

2009-10-08  Per Bothner  <per@bothner.com>

	* Declaration.java (isStatic):  Also static if a compiler-time constant.
	This reduces errors from FindCapturedVars.capture.
	(makeField): Simplify accordingly.

2009-09-30  Per Bothner  <per@bothner.com>

	* Declaration.java (load): Create FieldLocation if this is indirect
	and DONT_DEREFERENCE, rather than using CREATE_FIELD_REFERENCE.
	(maybeIndirectBinding): New method.
	(makeField): Only setIndirectBinding if immediate.  (It may have
	been set previously if maybeIndirectBinding was called.)
	Also, never set field type to gnu.kawa.reflect.FieldLocation.
	* ModuleInfo.java (setupModuleExp): ..
	* Language.java (declFromField): Only set name from value if final.
	* ModuleInfo.java (makeDeclInModule2); Don't set CREATE_FIELD_REFERENCE.
	* ReferenceExp.java (CREATE_FIELD_REFERENCE): Remove - no longer used.

2009-09-29  Per Bothner  <per@bothner.com>

	* GenericProc.java (getMethod, getMethodCount): New methods.
	* PrimProcedure.java (disassemble): Add support for GenericProc.
	Recover more cleanly from anonymous functions.

	* PrimProcedure.java (disassemble, disassemble$X): New static methods
	to help with debugging.

2009-09-26  Per Bothner  <per@bothner.com>

	* QuoteExp.java (getRawType): New method.

2009-09-15  Per Bothner  <per@bothner.com>

	* StackTarget.java (compileFromStack0): Use new
	Type.emitConvertFromPrimitive this allows use to change the default
	mapping int->java.lang.Integer but optimize when we need IntNum.

	* InlineCalls.java (maybeInline): Check for InvocationTargetException.

	* Language.java (coerceToObject(int)): Rmeove method.

	* ApplicationMainSupport.java: New class.
	Contains code moved from ModuleBody and repl.
	* Makefile.am: Update accordingly.
	* ModuleBody.java (commandLineArgArray, commandLineArguments,
	processArgs, setArgs): Move to ApplicationMainSupport.