@@ -1,3 +1,8 @@
+2009-10-09  Per Bothner  <per@bothner.com>
+
+	* std_syntax.scm (define-procedure): Use 'java.lang.Object' explicitly
+	rather than semi-ambiguous 'object'.
+
 2009-10-03  Per Bothner  <per@bothner.com>
 
 	* std_syntax.scm (do):  Re-write so we can handle type-specifiers
